<resources>
    <string name="app_name">H.A.G. Board Trainer</string>
    <string name="title_activity_move">MoveActivity</string>
    <string name="shallowerButtonText">Shallower</string>
    <string name="deeperButtonText">Deeper</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="multiple_hag_boards">More than one H.A.G. Board in range!</string>
    <string name="hag_board_disconnect">H.A.G. Board disconnected!</string>
    <string name="scanning_status">Searching for H.A.G. Boards</string>
    <string name="not_found_status">H.A.G. Board not found!</string>
    <string name="found_status">H.A.G. Board found!</string>
    <string name="connect_button_connect">Connect</string>
    <string name="connect_button_search">Search</string>
    <string name="connect_button_searching">Searching…</string>
    <string name="prepareText">Prepare</string>
    <string name="startButtonText">Start</string>
    <string name="timerStatusBreak">Break</string>
    <string name="timerStatusRest">Rest</string>
    <string name="timerStatusDone">Done</string>
    <string name="timerStatusWork">Work</string>
    <string name="pauseButtonText">Pause</string>
    <string name="change_workout">Change Workout</string>
    <string name="workout_log">Workout Log</string>
    <string name="free_hang">Free Hang</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="optionsMenuButton">⋮</string>
    <string name="timer">Timer</string>
</resources>
