<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_baseline_menu_24px"
        app:showAsAction="always"
        android:title="menu">
        <menu>

            <item
                android:id="@+id/action_timer"
                android:icon="@drawable/ic_baseline_timer_24px"
                android:title="@string/timer"
                app:showAsAction="ifRoom|withText" />

            <item
                android:id="@+id/action_editWorkout"
                android:title="@string/change_workout"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_workoutLog"
                android:title="@string/workout_log"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_freeHang"
                android:title="@string/free_hang"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_connect"
                android:icon="@drawable/ic_baseline_bluetooth_24px"
                android:title="@string/connect" />

            <item
                android:id="@+id/action_disconnect"
                android:icon="@drawable/ic_baseline_bluetooth_disabled_24px"
                android:title="@string/disconnect" />
        </menu>
    </item>


</menu>